<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@mipmap/calc_background"
        android:scaleType="centerCrop"
        android:contentDescription="@string/app_name"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activities.CActivityCalculator">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/simple_calculator"
            android:layout_weight="1"
            android:textSize="42sp"
            android:textColor="@color/main2"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filledTextField1"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/number_1"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/RowHeight"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:text="@string/plus"
                android:textSize="40sp"
                android:backgroundTint="@color/main"
                />

            <Button
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:backgroundTint="@color/main"
                android:text="@string/minus"
                android:textSize="40sp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:backgroundTint="@color/main"
                android:text="@string/multiplication"
                android:textSize="40sp"
                />

            <Button
                android:id="@+id/button4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/main"
                android:text="@string/division"
                android:textSize="40sp"/>

<!--            <ImageButton-->
<!--                android:id="@+id/buttonPlus"-->
<!--                style="@style/button"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_weight="1"-->
<!--                android:background="@drawable/custom_button"-->
<!--                -->
<!--                android:onClick="onButtonPlusClick"-->
<!--                tools:ignore="TouchTargetSizeCheck" />-->
<!--            <ImageButton-->
<!--                android:id="@+id/buttonMinus"-->
<!--                style="@style/button"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_weight="1"-->
<!--                android:background="@drawable/custom_button"-->
<!--                android:contentDescription="no"-->
<!--                app:srcCompat="@drawable/ic_division_white_24"-->
<!--                tools:ignore="TouchTargetSizeCheck" />-->

<!--            <ImageButton-->
<!--                android:id="@+id/buttonMultiplication"-->
<!--                style="@style/button"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_weight="1"-->
<!--                android:background="@drawable/custom_button"-->
<!--                android:contentDescription="no"-->
<!--                app:srcCompat="@drawable/ic_division_white_24"-->
<!--                tools:ignore="TouchTargetSizeCheck" />-->
<!--            <ImageButton-->
<!--                android:id="@+id/buttonDivision"-->
<!--                style="@style/button"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_weight="1"-->
<!--                android:background="@drawable/custom_button"-->
<!--                android:contentDescription="no"-->
<!--                app:srcCompat="@drawable/ic_division_white_24"-->
<!--                tools:ignore="TouchTargetSizeCheck" />-->

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filledTextField2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/number_2"
            style="@style/button">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/RowHeight"
            android:text="@string/textview"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:visibility="visible" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10" />

    </LinearLayout>
</FrameLayout>
